# AsyncDjangoDashboard

./: .dockerignore  .env.prod  .gitignore  Dockerfile.dev  README.md  docker-compose.prod.yml  pyproject.toml
nginx/: Dockerfile  nginx.conf
src/core/: settings.py  urls.py
src/currency/: admin.py  apps.py  index.py  models.py  runner.py  urls.py  views.py
src/currency/migrations/: 0001_initial.py
src/orders/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/orders/migrations/: 0001_initial.py  0002_alter_order_options.py
src/reminder/: admin.py  apps.py  models.py
src/reminder/bot/: broadcast.py  main.py
src/reminder/migrations/: 0001_initial.py  0002_alter_notification_options_alter_user_options.py
